--- a/index.html
+++ b/index.html
@@ -5,17 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-        <link rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        />
-        <link rel="stylesheet"
-        href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-        crossorigin="anonymous"
-        />
-        <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-        />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" />
         <link rel="stylesheet" href="./assets/css/style.css" />
         
         <title>Work Day Scheduler</title>
@@ -28,8 +20,80 @@
             <p id="currentDay" class="lead"></p>
         </header>
 
-        <!-- Timeblocks go here -->
-        <div class="container"></div>
+        <!-- Timeblocks -->
+        <div class="container">
+            <div id="time-09" class="row time-block">
+                <div class="col-sm-1 d-flex hour">
+                    <span class="mt-3 ml-4 pl-2">9AM</span>
+                </div>
+                <textarea class="col-sm"></textarea>
+                <button class="col-sm-1 btn saveBtn"><i class="fas fa-save fa-lg"></i></button>
+            </div>
+
+            <div id="time-10" class="row time-block">
+                <div class="col-sm-1 d-flex hour">
+                    <span class="mt-3 ml-4 pl-2">10AM</span>
+                </div>
+                <textarea class="col-sm"></textarea>
+                <button class="col-sm-1 btn saveBtn"><i class="fas fa-save fa-lg"></i></button>
+            </div>
+
+            <div id="time-11" class="row time-block">
+                <div class="col-sm-1 d-flex hour">
+                    <span class="mt-3 ml-4 pl-2">11AM</span>
+                </div>
+                <textarea class="col-sm"></textarea>
+                <button class="col-sm-1 btn saveBtn"><i class="fas fa-save fa-lg"></i></button>
+            </div>
+
+            <div id="time-12" class="row time-block">
+                <div class="col-sm-1 d-flex hour">
+                    <span class="mt-3 ml-4 pl-2">12PM</span>
+                </div>
+                <textarea class="col-sm"></textarea>
+                <button class="col-sm-1 btn saveBtn"><i class="fas fa-save fa-lg"></i></button>
+            </div>
+
+            <div id="time-13" class="row time-block">
+                <div class="col-sm-1 d-flex hour">
+                    <span class="mt-3 ml-4 pl-2">1PM</span>
+                </div>
+                <textarea class="col-sm"></textarea>
+                <button class="col-sm-1 btn saveBtn"><i class="fas fa-save fa-lg"></i></button>
+            </div>
+
+            <div id="time-14" class="row time-block">
+                <div class="col-sm-1 d-flex hour">
+                    <span class="mt-3 ml-4 pl-2">2PM</span>
+                </div>
+                <textarea class="col-sm"></textarea>
+                <button class="col-sm-1 btn saveBtn"><i class="fas fa-save fa-lg"></i></button>
+            </div>
+
+            <div id="time-15" class="row time-block">
+                <div class="col-sm-1 d-flex hour">
+                    <span class="mt-3 ml-4 pl-2">3PM</span>
+                </div>
+                <textarea class="col-sm"></textarea>
+                <button class="col-sm-1 btn saveBtn"><i class="fas fa-save fa-lg"></i></button>
+            </div>
+
+            <div id="time-16" class="row time-block">
+                <div class="col-sm-1 d-flex hour">
+                    <span class="mt-3 ml-4 pl-2">4PM</span>
+                </div>
+                <textarea class="col-sm"></textarea>
+                <button class="col-sm-1 btn saveBtn"><i class="fas fa-save fa-lg"></i></button>
+            </div>
+
+            <div id="time-17" class="row time-block">
+                <div class="col-sm-1 d-flex hour">
+                    <span class="mt-3 ml-4 pl-2">5PM</span>
+                </div>
+                <textarea class="col-sm"></textarea>
+                <button class="col-sm-1 btn saveBtn"><i class="fas fa-save fa-lg"></i></button>
+            </div>
+        </div>
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
