display current date and color-code time blocks

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <!-- Timeblocks -->
         <div class="container">
-            <div id="time-09" class="row time-block">
+            <div id="time-9" class="row time-block">
                 <div class="col-sm-1 d-flex hour">
                     <span class="mt-3 ml-4 pl-2">9AM</span>
                 </div>
@@ -97,7 +97,7 @@
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-        <!-- <script src="./assets/js/script.js"></script> -->
+        <script src="./assets/js/script.js"></script>
     </body>
 </html>
 
